try new coloring schemes
This was a bit of a failure. Need to try wrapping it in a them like Matt suggested.

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "deck.gl": "^8.8.4",
     "google-protobuf": "^3.19.4",
     "grpc-web": "1.2.1",
+    "kmeansjs": "0.0.3",
     "leaflet": "^1.7.1",
     "mongodb": "^4.8.0",
     "react": "^17.0.2",
